change path to what is mounted in singularity container

--- a/ED2/MANDIFORE_runs/README.Rmd
+++ b/ED2/MANDIFORE_runs/README.Rmd
@@ -161,7 +161,7 @@ PEcAn.remote::remote.copy.to(
 ```
 
 ```{r}
-base <- "/groups/dlebauer/data/sites/mandifore"
+base <- "/data/sites/mandifore"
 
 settings$run$inputs$met <- file.path(base, s$met_filename)
 
